overflowing text fix
modern browsers support it

--- a/src/stylus/framework/overrides.styl
+++ b/src/stylus/framework/overrides.styl
@@ -16,4 +16,4 @@ a[href]
     color inherit
 
 p
-  word-break break-all
+  word-break break-word
